--- a/studio_2015/templates/project_flame.xml
+++ b/studio_2015/templates/project_flame.xml
@@ -38,4 +38,13 @@
     <dir basename="timewarp" perms="02775" username="pipeline" group="artist">
         <dir basename="flame" perms="02775" username="pipeline" group="artist"/>
     </dir>
+
+    <dir basename="export/presets" perms="02775" username="pipeline" group="artist">
+        <dir basename="audio_file" perms="02775" username="pipeline" group="artist"/>
+        <dir basename="file_sequence" perms="02775" username="pipeline" group="artist"/>
+        <dir basename="movie_file" perms="02775" username="pipeline" group="artist"/>
+        <dir basename="sequence_publish" perms="02775" username="pipeline" group="artist">
+            <file basename="Source Camera Media Transcode Publish.xml" href="/studio/tools/var/dirtt/templates/studio_2015/templates/file_templates/flame_camera_media_transcode_publish.xml"/>
+        </dir>
+    </dir>
 </dirtt>
