--- a/studio_2015/templates/project_production.xml
+++ b/studio_2015/templates/project_production.xml
@@ -19,6 +19,14 @@
       <dir basename="_YYYY-MM-DD_description" name="_YYYY-MM-DD_description"/>
   </dir>
 
+  <dir basename="Vendor_IN" name="Client_In">
+      <dir basename="_YYYY-MM-DD_description" name="_YYYY-MM-DD_description"/>
+  </dir>
+
+  <dir basename="Vendor_OUT" name="Client_Out">
+      <dir basename="_YYYY-MM-DD_description" name="_YYYY-MM-DD_description"/>
+  </dir>
+
   <dir basename="Shot_Sheets" name="Shot_Sheets"/>
 
   <dir basename="WIP" name="WIP">
